03/sg/main.tf
resource "aws_security_group" "main" {
  description = "Allow traffic for apache2 server page"
#  vpc_id      = aws_vpc.main.id

  tags = {
    Name = "SG for Modules"
  }
  ingress {
    from_port   = 80
    protocol    = "TCP"
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    protocol    = "TCP"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
